--- a/package.json
+++ b/package.json
@@ -19,13 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "zmq": "~2.6.0",
-    "evilscan": "0.0.9",
-    "commander": "~2.2.0",
-    "merge": "^1.1.2"
+    "merge": "~1.1.2"
   },
   "devDependencies": {
-    "gulp-mocha": "~0.4.1",
     "mocha": "~1.18.2",
-    "should": "^3.3.0"
+    "should": "~3.3.0"
   }
 }
